{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 3086,
  "lineage": "bfd1162b-e921-05a2-7c40-d0f91cf9e30e",
  "resources": [
    {
      "module": "module.default_route_table",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:route-table/rtb-0398d7ad02ac40dfe",
            "default_route_table_id": "rtb-0398d7ad02ac40dfe",
            "id": "rtb-0398d7ad02ac40dfe",
            "owner_id": "501114629431",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09960c986128bc65b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "acme-default-rtb",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-default-rtb",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.public",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"enterprise_connector\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-069c45f40acdfe41e",
            "arn": "arn:aws:ec2:us-east-1:501114629431:instance/i-0cfe64d64b5dc127b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-0cfe64d64b5dc127b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "cs-justin-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d66fd9caf7b82527"
              }
            ],
            "password_data": "jr1o9BlMW14omktL5sDleUrg8bwhcoYJo5yp72d4cemATkdqrjen+kqnLRsapMzhYwXX0G4cNlwTtK/dJRezQapUzvUkA71knKDpA7ClYEMjLKO6pp38VFzRZ7AJ9GLgiORNbMv+qa5RuupbDuygb2Mt1rSunHh9V9abKMrTnqUoYfOCML3N2/buSYMCF8EkuJ1nLlS9DvaNt0FptYM74/RVuYW0sWnI93fet4V9k7bhmiminjMD8T2S17spqXuLEkKzCuYD/Drs4bjs2cZ4Hnnyp2vKA3AjgKiF+3oLyYRhbQhOaIRfRJ9RmWgWjLInORpEAg5o0kt7Jm7iRzNBhg==",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d66fd9caf7b82527",
            "private_dns": "ip-10-100-3-197.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.3.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0235cbd283673a2f1",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080a87cbd98b466e4",
            "tags": {
              "Name": "acme-ec-01",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "enterprise_connector_1",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-ec-01",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "enterprise_connector_1",
              "team": "devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-067e4a7036d83f951"
            ]
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.ec2_instance.data.aws_ami.image",
            "module.network_interface.aws_network_interface.eni",
            "module.security_group.aws_security_group.object",
            "module.security_group.aws_vpc_security_group_egress_rule.erule",
            "module.security_group.aws_vpc_security_group_ingress_rule.irule",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-069c45f40acdfe41e",
            "arn": "arn:aws:ec2:us-east-1:501114629431:instance/i-05fb5dd1fc7c47291",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-05fb5dd1fc7c47291",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "cs-justin-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-01e67c1f176d0bced"
              }
            ],
            "password_data": "I1+ICv1ebzYwmTpJVs7T3b2I0MqQVbBWzsm5DnJJFfVJL5ev7qDulTO0dQCrBVg+6lhJl17t/57H8VP9lD420Qjw+juvao9x2UsmGdxkD0ImkxkHdHe9Xu9BLMFSpcCfD2aNBQ6yb00sajd4MnZfLerlQc9qJMhD+lmH/pnWJesoOHW9+7H+ZP63tdo2vsSkSQRpvbl4alZ5MOeb5TlXY+tFp2/cWNPCvxXU4XU1w5zB5y8DhIczZ4Yp+xdtWi9CBbzvp0546lywqNUL2BBG2nDDLbD8cmGhJunGjW0Yw969qFbMgk93Eeq2PeyO9RsSCTBiXTON44TkC2MDTcFPUw==",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01e67c1f176d0bced",
            "private_dns": "ip-10-100-3-218.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.3.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0405ad426eddad697",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033f5d4e44c361e60",
            "tags": {
              "Name": "acme-ec-02",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "enterprise_connector_2",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-ec-02",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "enterprise_connector_2",
              "team": "devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-067e4a7036d83f951"
            ]
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.ec2_instance.data.aws_ami.image",
            "module.network_interface.aws_network_interface.eni",
            "module.security_group.aws_security_group.object",
            "module.security_group.aws_vpc_security_group_egress_rule.erule",
            "module.security_group.aws_vpc_security_group_ingress_rule.irule",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance[\"gateway\"]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-069c45f40acdfe41e",
            "arn": "arn:aws:ec2:us-east-1:501114629431:instance/i-0d6ac0803d52838d5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-0d6ac0803d52838d5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "cs-justin-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-04f738f4ed6f1744e"
              }
            ],
            "password_data": "jj3Xx0SIHBpOwQa6nYUDTyA2VyaEehNe2wstMzSAbiN076Z+v+YLIJY45JHtdZ9Z695LthLfS18Vx6/K+dgfSUrGwKAxTAo5ZI92cC5k3sizIBFAwFsKZQHtxfH3EStkZykg4ZpGDgNP3Uz7B/M+eq9RSxNT/iPdDIy164PY2eVvGc6X99nNNBNZMUImVfilS907nDkDxbq+BIrlyPZXGytwJMtFWECJH/zNoMGkqghQ4gVg++6GLxOyC+tIUwuTjooZ4r6zOXd1SDdECsoH/4npMbJ2Po3+IiUlQVlxGVrg2y6pWRt2olz5LCek4Mhn6UluEMH013z9XXL7fO7F4g==",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04f738f4ed6f1744e",
            "private_dns": "ip-10-100-3-238.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.3.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e0f676a6843b05ce",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba1b7078b37c0e02",
            "tags": {
              "Name": "acme-gw-01",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "gateway_1",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-gw-01",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "gateway_1",
              "team": "devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011e15c7ef2b2db1e"
            ]
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.ec2_instance.data.aws_ami.image",
            "module.network_interface.aws_network_interface.eni",
            "module.security_group.aws_security_group.object",
            "module.security_group.aws_vpc_security_group_egress_rule.erule",
            "module.security_group.aws_vpc_security_group_ingress_rule.irule",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-069c45f40acdfe41e",
            "arn": "arn:aws:ec2:us-east-1:501114629431:instance/i-048f298b89707ede4",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": true,
            "hibernation": false,
            "id": "i-048f298b89707ede4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "cs-justin-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0ee978ae1236889d8"
              }
            ],
            "password_data": "Ww1sjWldHa50V1bTorTdD8cRHw39VOYIxA+8pDXqGtPrDkSGYXh9VG6JCSdtH+/bOmElKgAXpoQC1OK87D6/Y6stCESxzsr8PbJDvjaBZGew/FxL0hpyI9HP75RTyy918xHpO3rNelqkeQYWaFNGHQUK04qwlXxaWCvYgjpv9FCjjjtOeGmxDz5l2PVS9YRLgrz/k/eifc4Jmsw4zHqWILEtR+Nd1oe9w7/3YW3A8HfOJ8yYbPd00AxO4mO1bOeC3mHDlBSW18edBgxetA+zugmFB688LZXluAZN3z7w4F/V6HL1B8eACUZWXEXws0WWceWUqxxYlWib1yuhw/u9KQ==",
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee978ae1236889d8",
            "private_dns": "ip-10-100-3-248.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.3.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-005140a9c443e4887",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c28f1ceb4f853c0",
            "tags": {
              "Name": "acme-gw-02",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "gateway_2",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-gw-02",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "gateway_2",
              "team": "devops"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-011e15c7ef2b2db1e"
            ]
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.ec2_instance.data.aws_ami.image",
            "module.network_interface.aws_network_interface.eni",
            "module.security_group.aws_security_group.object",
            "module.security_group.aws_vpc_security_group_egress_rule.erule",
            "module.security_group.aws_vpc_security_group_ingress_rule.irule",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_ip[\"acme-gw-01\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094502297233bbf0a",
            "associate_with_private_ip": "10.100.3.238",
            "association_id": "eipassoc-0759e7994e8f8c53a",
            "domain": "vpc",
            "id": "eipalloc-094502297233bbf0a",
            "instance": "i-0d6ac0803d52838d5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-04f738f4ed6f1744e",
            "private_dns": "ip-10-100-3-238.ec2.internal",
            "private_ip": "10.100.3.238",
            "public_dns": "ec2-34-232-165-41.compute-1.amazonaws.com",
            "public_ip": "34.232.165.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "acme-gw-01-eip",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "gateway_1",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-gw-01-eip",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "gateway_1",
              "team": "devops"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.ec2_instance.aws_instance.server",
            "module.ec2_instance.data.aws_ami.image",
            "module.internet_gateway.aws_internet_gateway.public",
            "module.network_interface.aws_network_interface.eni",
            "module.security_group.aws_security_group.object",
            "module.security_group.aws_vpc_security_group_egress_rule.erule",
            "module.security_group.aws_vpc_security_group_ingress_rule.irule",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.elastic_ip[\"acme-gw-02\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0df358512d105d6b0",
            "associate_with_private_ip": "10.100.3.248",
            "association_id": "eipassoc-0856614913632c4c0",
            "domain": "vpc",
            "id": "eipalloc-0df358512d105d6b0",
            "instance": "i-048f298b89707ede4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ee978ae1236889d8",
            "private_dns": "ip-10-100-3-248.ec2.internal",
            "private_ip": "10.100.3.248",
            "public_dns": "ec2-44-195-204-18.compute-1.amazonaws.com",
            "public_ip": "44.195.204.18",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "acme-gw-02-eip",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "gateway_2",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-gw-02-eip",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "gateway_2",
              "team": "devops"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.ec2_instance.aws_instance.server",
            "module.ec2_instance.data.aws_ami.image",
            "module.internet_gateway.aws_internet_gateway.public",
            "module.network_interface.aws_network_interface.eni",
            "module.security_group.aws_security_group.object",
            "module.security_group.aws_vpc_security_group_egress_rule.erule",
            "module.security_group.aws_vpc_security_group_ingress_rule.irule",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:internet-gateway/igw-09960c986128bc65b",
            "id": "igw-09960c986128bc65b",
            "owner_id": "501114629431",
            "tags": {
              "Name": "acme-igw",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-igw",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "team": "devops"
            },
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "dependencies": [
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway[\"gateway_1\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024786d22115de147",
            "domain": "vpc",
            "id": "eipalloc-024786d22115de147",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-235-4-104.compute-1.amazonaws.com",
            "public_ip": "18.235.4.104",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "acme-nat-gw-eip-use1-az2",
              "availability_zone_id": "use1-az2",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "internet",
              "team": "devops",
              "zone": "dmz"
            },
            "tags_all": {
              "Name": "acme-nat-gw-eip-use1-az2",
              "availability_zone_id": "use1-az2",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "internet",
              "team": "devops",
              "zone": "dmz"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.internet_gateway.aws_internet_gateway.public",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway[\"gateway_1\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024786d22115de147",
            "association_id": "eipassoc-0d5f4a3b4d832531e",
            "connectivity_type": "public",
            "id": "nat-0f6dc719d7febe05c",
            "network_interface_id": "eni-0f49725fccc47a1aa",
            "private_ip": "10.100.3.234",
            "public_ip": "18.235.4.104",
            "subnet_id": "subnet-0ba1b7078b37c0e02",
            "tags": {
              "Name": "acme-nat-gw-use1-az2",
              "az_id": "use1-az2",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "internet",
              "team": "devops",
              "zone": "dmz"
            },
            "tags_all": {
              "Name": "acme-nat-gw-use1-az2",
              "az_id": "use1-az2",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "internet",
              "team": "devops",
              "zone": "dmz"
            }
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.internet_gateway.aws_internet_gateway.public",
            "module.nat_gateway.aws_eip.nat",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway[\"gateway_2\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad695952013404d6",
            "domain": "vpc",
            "id": "eipalloc-0ad695952013404d6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-92-224-158.compute-1.amazonaws.com",
            "public_ip": "54.92.224.158",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "acme-nat-gw-eip-use1-az4",
              "availability_zone_id": "use1-az4",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "internet",
              "team": "devops",
              "zone": "dmz"
            },
            "tags_all": {
              "Name": "acme-nat-gw-eip-use1-az4",
              "availability_zone_id": "use1-az4",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "internet",
              "team": "devops",
              "zone": "dmz"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.internet_gateway.aws_internet_gateway.public",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway[\"gateway_2\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ad695952013404d6",
            "association_id": "eipassoc-0b641eb3c53eee88d",
            "connectivity_type": "public",
            "id": "nat-01642b31c3b0411ff",
            "network_interface_id": "eni-037dc30e5a6bcf863",
            "private_ip": "10.100.3.250",
            "public_ip": "54.92.224.158",
            "subnet_id": "subnet-08c28f1ceb4f853c0",
            "tags": {
              "Name": "acme-nat-gw-use1-az4",
              "az_id": "use1-az4",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "internet",
              "team": "devops",
              "zone": "dmz"
            },
            "tags_all": {
              "Name": "acme-nat-gw-use1-az4",
              "az_id": "use1-az4",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "internet",
              "team": "devops",
              "zone": "dmz"
            }
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.internet_gateway.aws_internet_gateway.public",
            "module.nat_gateway.aws_eip.nat",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_interface[0]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:network-interface/eni-0d66fd9caf7b82527",
            "id": "eni-0d66fd9caf7b82527",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:1f:17:14:10:63",
            "owner_id": "501114629431",
            "private_ip": "10.100.3.197",
            "private_ip_list": [
              "10.100.3.197"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.100.3.197"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-067e4a7036d83f951"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-080a87cbd98b466e4",
            "tags": {
              "Name": "acme-ec-01-eni",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "enterprise_connector_1",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-ec-01-eni",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "enterprise_connector_1",
              "team": "devops"
            }
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.security_group.aws_security_group.object",
            "module.security_group.aws_vpc_security_group_egress_rule.erule",
            "module.security_group.aws_vpc_security_group_ingress_rule.irule",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_interface[1]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:network-interface/eni-01e67c1f176d0bced",
            "id": "eni-01e67c1f176d0bced",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:cf:ef:3b:84:91",
            "owner_id": "501114629431",
            "private_ip": "10.100.3.218",
            "private_ip_list": [
              "10.100.3.218"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.100.3.218"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-067e4a7036d83f951"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033f5d4e44c361e60",
            "tags": {
              "Name": "acme-ec-02-eni",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "enterprise_connector_2",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-ec-02-eni",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "enterprise_connector_2",
              "team": "devops"
            }
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.security_group.aws_security_group.object",
            "module.security_group.aws_vpc_security_group_egress_rule.erule",
            "module.security_group.aws_vpc_security_group_ingress_rule.irule",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_interface[2]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:network-interface/eni-04f738f4ed6f1744e",
            "id": "eni-04f738f4ed6f1744e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:90:e0:74:26:91",
            "owner_id": "501114629431",
            "private_ip": "10.100.3.238",
            "private_ip_list": [
              "10.100.3.238"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.100.3.238"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-011e15c7ef2b2db1e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba1b7078b37c0e02",
            "tags": {
              "Name": "acme-gw-01-eni",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "gateway_1",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-gw-01-eni",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "gateway_1",
              "team": "devops"
            }
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.security_group.aws_security_group.object",
            "module.security_group.aws_vpc_security_group_egress_rule.erule",
            "module.security_group.aws_vpc_security_group_ingress_rule.irule",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_interface[3]",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "eni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:network-interface/eni-0ee978ae1236889d8",
            "id": "eni-0ee978ae1236889d8",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:a4:92:32:33:b5",
            "owner_id": "501114629431",
            "private_ip": "10.100.3.248",
            "private_ip_list": [
              "10.100.3.248"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.100.3.248"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-011e15c7ef2b2db1e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08c28f1ceb4f853c0",
            "tags": {
              "Name": "acme-gw-02-eni",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "gateway_2",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-gw-02-eni",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service_name": "gateway_2",
              "team": "devops"
            }
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.security_group.aws_security_group.object",
            "module.security_group.aws_vpc_security_group_egress_rule.erule",
            "module.security_group.aws_vpc_security_group_ingress_rule.irule",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table[\"gateway_1\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:route-table/rtb-01f8432f8e43cd9b0",
            "id": "rtb-01f8432f8e43cd9b0",
            "owner_id": "501114629431",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f6dc719d7febe05c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "acme-nat-gw-use1-az2-rtb"
            },
            "tags_all": {
              "Name": "acme-nat-gw-use1-az2-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.internet_gateway.aws_internet_gateway.public",
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.public",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table[\"gateway_1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internal_by_az",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dec9a0e88bc9f43",
            "route_table_id": "rtb-01f8432f8e43cd9b0",
            "subnet_id": "subnet-07211ab84d49e68de"
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.internet_gateway.aws_internet_gateway.public",
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.public",
            "module.route_table.aws_route_table.internal",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c40be0783f777aab",
            "route_table_id": "rtb-01f8432f8e43cd9b0",
            "subnet_id": "subnet-080a87cbd98b466e4"
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.internet_gateway.aws_internet_gateway.public",
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.public",
            "module.route_table.aws_route_table.internal",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07edea27b6b742160",
            "route_table_id": "rtb-01f8432f8e43cd9b0",
            "subnet_id": "subnet-0e1a16efdccd91bc4"
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.internet_gateway.aws_internet_gateway.public",
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.public",
            "module.route_table.aws_route_table.internal",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table[\"gateway_2\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:route-table/rtb-08d5d94dbb34d3600",
            "id": "rtb-08d5d94dbb34d3600",
            "owner_id": "501114629431",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01642b31c3b0411ff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "acme-nat-gw-use1-az4-rtb"
            },
            "tags_all": {
              "Name": "acme-nat-gw-use1-az4-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.internet_gateway.aws_internet_gateway.public",
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.public",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table[\"gateway_2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "internal_by_az",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08eb9e60ad2449267",
            "route_table_id": "rtb-08d5d94dbb34d3600",
            "subnet_id": "subnet-033f5d4e44c361e60"
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.internet_gateway.aws_internet_gateway.public",
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.public",
            "module.route_table.aws_route_table.internal",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0220f58365d80fcbf",
            "route_table_id": "rtb-08d5d94dbb34d3600",
            "subnet_id": "subnet-06dc76a49f9ddfeb7"
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.internet_gateway.aws_internet_gateway.public",
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.public",
            "module.route_table.aws_route_table.internal",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd14533b5876560d",
            "route_table_id": "rtb-08d5d94dbb34d3600",
            "subnet_id": "subnet-0722a18354a50d9f7"
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.internet_gateway.aws_internet_gateway.public",
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.public",
            "module.route_table.aws_route_table.internal",
            "module.subnet.aws_subnet.subnet",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"cloudpc\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "object",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group/sg-06db2d02bdffeb903",
            "description": "AWS Security Group for the Workspot Desktops.",
            "egress": [],
            "id": "sg-06db2d02bdffeb903",
            "ingress": [],
            "name": "acme-cloudpc-sg",
            "name_prefix": "",
            "owner_id": "501114629431",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acme-cloudpc-sg",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "cloud_pc",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-cloudpc-sg",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "cloud_pc",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"cloudpc\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "erule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "d-e-rule-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-009d570065727a6e3",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic.",
            "from_port": null,
            "id": "sgr-009d570065727a6e3",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06db2d02bdffeb903",
            "security_group_rule_id": "sgr-009d570065727a6e3",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"cloudpc\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "irule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "d-i-rule-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-0376741982fdfb77c",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": "Allow private IP - 10.0.0.0/8 addresses.",
            "from_port": null,
            "id": "sgr-0376741982fdfb77c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06db2d02bdffeb903",
            "security_group_rule_id": "sgr-0376741982fdfb77c",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": "d-i-rule-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-0c996c4032e4cbe8b",
            "cidr_ipv4": "172.16.0.0/12",
            "cidr_ipv6": null,
            "description": "Allow private IP - 172.16.0.0/12 addresses.",
            "from_port": null,
            "id": "sgr-0c996c4032e4cbe8b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06db2d02bdffeb903",
            "security_group_rule_id": "sgr-0c996c4032e4cbe8b",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": "d-i-rule-3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-03121a167213f23ad",
            "cidr_ipv4": "192.168.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow private IP - 192.168.0.0/16 addresses.",
            "from_port": null,
            "id": "sgr-03121a167213f23ad",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06db2d02bdffeb903",
            "security_group_rule_id": "sgr-03121a167213f23ad",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"ec\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "object",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group/sg-067e4a7036d83f951",
            "description": "AWS Security Group for Workspot Enterprise Connectors in ECMGMT subnets.",
            "egress": [],
            "id": "sg-067e4a7036d83f951",
            "ingress": [],
            "name": "acme-ec-sg",
            "name_prefix": "",
            "owner_id": "501114629431",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acme-ec-sg",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "enterprise_connector",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-ec-sg",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "enterprise_connector",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"ec\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "erule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "d-e-rule-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-06f3d210fc55de7c4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic.",
            "from_port": null,
            "id": "sgr-06f3d210fc55de7c4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067e4a7036d83f951",
            "security_group_rule_id": "sgr-06f3d210fc55de7c4",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"ec\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "irule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "d-i-rule-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-0f300745356a46713",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": "Allow private IP - 10.0.0.0/8 addresses.",
            "from_port": null,
            "id": "sgr-0f300745356a46713",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067e4a7036d83f951",
            "security_group_rule_id": "sgr-0f300745356a46713",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": "d-i-rule-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-0045148a74f3f4d25",
            "cidr_ipv4": "172.16.0.0/12",
            "cidr_ipv6": null,
            "description": "Allow private IP - 172.16.0.0/12 addresses.",
            "from_port": null,
            "id": "sgr-0045148a74f3f4d25",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067e4a7036d83f951",
            "security_group_rule_id": "sgr-0045148a74f3f4d25",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": "d-i-rule-3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-0385e4c8bf7c899f2",
            "cidr_ipv4": "192.168.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow private IP - 192.168.0.0/16 addresses.",
            "from_port": null,
            "id": "sgr-0385e4c8bf7c899f2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-067e4a7036d83f951",
            "security_group_rule_id": "sgr-0385e4c8bf7c899f2",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"gw\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "object",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group/sg-011e15c7ef2b2db1e",
            "description": "AWS Security Group for Workspot Gateways in DMZ subnets.",
            "egress": [],
            "id": "sg-011e15c7ef2b2db1e",
            "ingress": [],
            "name": "acme-gw-sg",
            "name_prefix": "",
            "owner_id": "501114629431",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "acme-gw-sg",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "gateway",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-gw-sg",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "gateway",
              "team": "devops"
            },
            "timeouts": null,
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"gw\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "erule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "d-e-rule-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-04600ebe455999f6b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic.",
            "from_port": null,
            "id": "sgr-04600ebe455999f6b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-011e15c7ef2b2db1e",
            "security_group_rule_id": "sgr-04600ebe455999f6b",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group[\"gw\"]",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "irule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "d-i-rule-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-04fc9992194aad88b",
            "cidr_ipv4": "10.0.0.0/8",
            "cidr_ipv6": null,
            "description": "Allow private IP - 10.0.0.0/8 addresses.",
            "from_port": null,
            "id": "sgr-04fc9992194aad88b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-011e15c7ef2b2db1e",
            "security_group_rule_id": "sgr-04fc9992194aad88b",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": "d-i-rule-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-0dd0564bc652cca5f",
            "cidr_ipv4": "172.16.0.0/12",
            "cidr_ipv6": null,
            "description": "Allow private IP - 172.16.0.0/12 addresses.",
            "from_port": null,
            "id": "sgr-0dd0564bc652cca5f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-011e15c7ef2b2db1e",
            "security_group_rule_id": "sgr-0dd0564bc652cca5f",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": "d-i-rule-3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-08a3dd501db6329dd",
            "cidr_ipv4": "192.168.0.0/16",
            "cidr_ipv6": null,
            "description": "Allow private IP - 192.168.0.0/16 addresses.",
            "from_port": null,
            "id": "sgr-08a3dd501db6329dd",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-011e15c7ef2b2db1e",
            "security_group_rule_id": "sgr-08a3dd501db6329dd",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "default",
              "team": "devops"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": "rule-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-0408ca77593f1ff6f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Secure RDP tunnel.",
            "from_port": 443,
            "id": "sgr-0408ca77593f1ff6f",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-011e15c7ef2b2db1e",
            "security_group_rule_id": "sgr-0408ca77593f1ff6f",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "gateway",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "gateway",
              "team": "devops"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": "rule-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-0fa4a6a30354c87f7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Performance RDP port.",
            "from_port": 3391,
            "id": "sgr-0fa4a6a30354c87f7",
            "ip_protocol": "udp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-011e15c7ef2b2db1e",
            "security_group_rule_id": "sgr-0fa4a6a30354c87f7",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "gateway",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "gateway",
              "team": "devops"
            },
            "to_port": 3391
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": "rule-3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-072ff97d37d2da144",
            "cidr_ipv4": "73.105.100.170/32",
            "cidr_ipv6": null,
            "description": "CS IP Address",
            "from_port": 3389,
            "id": "sgr-072ff97d37d2da144",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-011e15c7ef2b2db1e",
            "security_group_rule_id": "sgr-072ff97d37d2da144",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "cs-access",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "cs-access",
              "team": "devops"
            },
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": "rule-4",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:security-group-rule/sgr-024c12b5f93441209",
            "cidr_ipv4": "23.126.202.4/32",
            "cidr_ipv6": null,
            "description": "CS IP Address",
            "from_port": 3389,
            "id": "sgr-024c12b5f93441209",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-011e15c7ef2b2db1e",
            "security_group_rule_id": "sgr-024c12b5f93441209",
            "tags": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "cs-access",
              "team": "devops"
            },
            "tags_all": {
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "cs-access",
              "team": "devops"
            },
            "to_port": 3389
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.object",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"ad_connector\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:subnet/subnet-0e1a16efdccd91bc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.3.160/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1a16efdccd91bc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501114629431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-adconnector-use1-az2",
              "az_id": "use1-az2",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "ad_connector",
              "service_name": "ad_connector_1",
              "team": "devops",
              "zone": "internal"
            },
            "tags_all": {
              "Name": "subnet-adconnector-use1-az2",
              "az_id": "use1-az2",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "ad_connector",
              "service_name": "ad_connector_1",
              "team": "devops",
              "zone": "internal"
            },
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:subnet/subnet-06dc76a49f9ddfeb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.3.176/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dc76a49f9ddfeb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501114629431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-adconnector-use1-az4",
              "az_id": "use1-az4",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "ad_connector",
              "service_name": "ad_connector_2",
              "team": "devops",
              "zone": "internal"
            },
            "tags_all": {
              "Name": "subnet-adconnector-use1-az4",
              "az_id": "use1-az4",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "ad_connector",
              "service_name": "ad_connector_2",
              "team": "devops",
              "zone": "internal"
            },
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"cloud_pc\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:subnet/subnet-07211ab84d49e68de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07211ab84d49e68de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501114629431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-cloudpc-use1-az2",
              "az_id": "use1-az2",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "cloud_pc",
              "service_name": "cloud_pc_1",
              "team": "devops",
              "zone": "internal"
            },
            "tags_all": {
              "Name": "subnet-cloudpc-use1-az2",
              "az_id": "use1-az2",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "cloud_pc",
              "service_name": "cloud_pc_1",
              "team": "devops",
              "zone": "internal"
            },
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:subnet/subnet-0722a18354a50d9f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0722a18354a50d9f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501114629431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-cloudpc-use1-az4",
              "az_id": "use1-az4",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "cloud_pc",
              "service_name": "cloud_pc_2",
              "team": "devops",
              "zone": "internal"
            },
            "tags_all": {
              "Name": "subnet-cloudpc-use1-az4",
              "az_id": "use1-az4",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "cloud_pc",
              "service_name": "cloud_pc_2",
              "team": "devops",
              "zone": "internal"
            },
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"dmz\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:subnet/subnet-0ba1b7078b37c0e02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.3.224/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba1b7078b37c0e02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501114629431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-dmz-use1-az2",
              "az_id": "use1-az2",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "gateway",
              "service_name": "gateway_1",
              "team": "devops",
              "zone": "dmz"
            },
            "tags_all": {
              "Name": "subnet-dmz-use1-az2",
              "az_id": "use1-az2",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "gateway",
              "service_name": "gateway_1",
              "team": "devops",
              "zone": "dmz"
            },
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:subnet/subnet-08c28f1ceb4f853c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.3.240/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c28f1ceb4f853c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501114629431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-dmz-use1-az4",
              "az_id": "use1-az4",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "gateway",
              "service_name": "gateway_2",
              "team": "devops",
              "zone": "dmz"
            },
            "tags_all": {
              "Name": "subnet-dmz-use1-az4",
              "az_id": "use1-az4",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "gateway",
              "service_name": "gateway_2",
              "team": "devops",
              "zone": "dmz"
            },
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"ec_mgmt\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:subnet/subnet-080a87cbd98b466e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.3.192/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080a87cbd98b466e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501114629431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-ecmgmt-use1-az2",
              "az_id": "use1-az2",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "enterprise_connector",
              "service_name": "enterprise_connector_1",
              "team": "devops",
              "zone": "internal"
            },
            "tags_all": {
              "Name": "subnet-ecmgmt-use1-az2",
              "az_id": "use1-az2",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "enterprise_connector",
              "service_name": "enterprise_connector_1",
              "team": "devops",
              "zone": "internal"
            },
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:subnet/subnet-033f5d4e44c361e60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.3.208/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033f5d4e44c361e60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "501114629431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-ecmgmt-use1-az4",
              "az_id": "use1-az4",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "enterprise_connector",
              "service_name": "enterprise_connector_2",
              "team": "devops",
              "zone": "internal"
            },
            "tags_all": {
              "Name": "subnet-ecmgmt-use1-az4",
              "az_id": "use1-az4",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "service": "enterprise_connector",
              "service_name": "enterprise_connector_2",
              "team": "devops",
              "zone": "internal"
            },
            "vpc_id": "vpc-04b7ddc6215dfa3ef"
          },
          "dependencies": [
            "data.aws_availability_zone.zones",
            "data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.workspot_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "workspot_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:501114629431:vpc/vpc-04b7ddc6215dfa3ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/22",
            "default_network_acl_id": "acl-0e53398fdcd1aa863",
            "default_route_table_id": "rtb-0398d7ad02ac40dfe",
            "default_security_group_id": "sg-0cdcafd34124325ef",
            "dhcp_options_id": "dopt-0ae4866776803708a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04b7ddc6215dfa3ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0398d7ad02ac40dfe",
            "owner_id": "501114629431",
            "tags": {
              "Name": "acme-workspot-vpc",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "team": "devops"
            },
            "tags_all": {
              "Name": "acme-workspot-vpc",
              "createdBy": "terraform",
              "environment": "prod",
              "managedBy": "workspot",
              "team": "devops"
            }
          }
        }
      ]
    }
  ]
}